force-app/main/default/objects/Uls_Calculator_Log__c/Uls_Calculator_Log__c.object-meta.xml
<CustomObject>
    <label>ULS Calculator Log</label>
    <nameField>
        <displayFormat>ULSLOG-{000000}</displayFormat>
        <label>ULS Calculator Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ULS Calculator Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>