force-app/main/default/objects/Uls_Calculator_Log__c/fields/Detailed_Log__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Log__c</fullName>
    <label>Detailed Log</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>