force-app/main/default/objects/Uls_Calculator_Log__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Text</type>
    <length>50</length>
</CustomField>