force-app/main/default/objects/Uls_Calculator_Log__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Text</type>
    <length>50</length>
</CustomField>