force-app/main/default/objects/Uls_Calculator_Log__c/fields/Error_Category__c.field-meta.xml
<CustomField>
    <fullName>Error_Category__c</fullName>
    <label>Error Category</label>
    <type>Text</type>
    <length>100</length>
</CustomField>