force-app/main/default/objects/Uls_Calculator_Log__c/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <label>Http Method</label>
    <type>Text</type>
    <length>10</length>
</CustomField>