force-app/main/default/objects/Uls_Calculator_Log__c/fields/Http_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Http_Status_Code__c</fullName>
    <label>Http Status Code</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>