force-app/main/default/objects/Uls_Calculator_Log__c/fields/Operation_Name__c.field-meta.xml
<CustomField>
    <fullName>Operation_Name__c</fullName>
    <label>Operation Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>