force-app/main/default/objects/Uls_Calculator_Log__c/fields/Policy_Number_Masked__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number_Masked__c</fullName>
    <label>Policy Number Masked</label>
    <type>Text</type>
    <length>50</length>
</CustomField>