force-app/main/default/objects/Uls_Calculator_Log__c/fields/Response_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Response_Timestamp__c</fullName>
    <label>Response Timestamp</label>
    <type>DateTime</type>
</CustomField>