force-app/main/default/objects/Uls_Calculator_Log__c/fields/Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User__c</fullName>
    <label>Salesforce User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>ULS Calculator Logs</relationshipLabel>
    <relationshipName>ULS_Calculator_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>