force-app/main/default/objects/Uls_Calculator_Log__c/fields/Sanitized_Message__c.field-meta.xml
<CustomField>
    <fullName>Sanitized_Message__c</fullName>
    <label>Sanitized Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>